# transit-amenity-atlas

./: README.md  clean_and_output_db.py  pyproject.toml  schema.md
Transit Agency Bus Stop Amenity Raw Data Sets/: BBB Stop Amenity Data.xlsx  City of Fresno Bus Stop Amenities Updated Jun 2024.csv  Long Beach Transit Bus Stop Amenities.xlsx  Morongo Basin Transit Bus Stop Amenities.xlsx  Mountain Transit Bus Stop Amenities.xlsx  OCTA Bus Stop Amenities.xlsx  Omnitrans Bus Stop Amenities.xlsx  SFMTA Bus Stop Amenities Updated Feb 2024.xlsx  SacRT Bus Stop Amenities Updated Dec 2022.xlsx  SamTrans Bus Stop Amenities Updated Fall 2022.xls  San Diego MTS Bus Stop Amenities Updated Jun 2024.xlsx
cleaned_column_name_data/: Santa Monica BBB Bus Stop Amenities.xlsx  VVTA Bus Stop Amenities.xlsx
semi_processed/: AC_Transit_Bus_Stop Amenities_Updated_Mar_2024.csv  BBB_Stop_Amenity_Data.xlsx  City_of_Fresno_Bus_Stop_Amenities_Updated_Jun_2024.csv  City_of_Needles_Bus_Stop_Amenities.xlsx  Nevada_County_ADA_Review_2021.csv  OCTA_Bus_Stop_Amenities.xlsx  Omnitrans_Bus_Stop_Amenities.xlsx  Riverside_Transit_Agency_Bus_Stop_Amenities_Updated_Jun_2024.xlsx  SBMTD_Bus_Stop_Amenities_Dataset_Cleaned_1-21-2025.xlsx  SFMTA_Bus_Stop_Amenities_Updated_Feb_2024.xlsx  SacRT_Bus_Stop_Amenities_Updated_Dec_2022.xlsx  SamTrans_Bus_Stop_Amenities_Updated_Fall_2022.xls  San_Diego_MTS_Bus_Stop_Amenities_Updated_Jun_2024.xlsx  Santa_Clara_Valley_Transportation_Authority_Bus_Stop_Amenities_Updated_2020.xlsx  Santa_Monica_BBB_Bus_Stop_Amenities.xlsx  VVTA_Bus_Stop_Amenities.xlsx
(+19 files in other folders)
